--- a/app/views/bikes/_form.html.erb
+++ b/app/views/bikes/_form.html.erb
@@ -1,35 +1,54 @@
-<div class="centered">
-	<%= render :partial => 'shared/form_errors', :locals => {:message => t('bikes.views.errors.on_save'), :object => @bike } %>
-	
-	<div class="field">
-		<p id="bike_name_not_empty" class="error"><%= t('bikes.views.form.validations.name') %></p>
-		<%= f.text_field :name, :placeholder => t('bikes.views.form.name'), :size => 40 %>
+
+<%= render :partial => 'shared/form_errors', :locals => {:message => t('bikes.views.errors.on_save'), :object => @bike } %>
+
+<div class="control-group">
+	<p id="bike_name_not_empty" class="alert alert-error error"><%= t('bikes.views.form.validations.name') %></p>
+	<label class="control-label"><%= t('bikes.views.form.name') %></label>
+	<div class="controls">
+		<%= f.text_field :name, :placeholder => t('bikes.views.form.placeholders.name'), :class => "span6" %>
+		<div id="bike_name_count" class="field-counter"></div>
 	</div>
+</div>
+
+<div class="control-group">
+	<p id="bike_description_not_empty" class="alert alert-error error"><%= t('bikes.views.form.validations.description') %></p>
 	
-	<p id="bike_weight_regexp" class="error"><%= t('bikes.views.form.validations.weight') %></p>
-	<div class="field inlined">
-		<%= f.text_field :frame_number, :placeholder => t('bikes.views.form.frame_number'), :size => 20 %>
-		<div class="hidden frame_number_help"><%= t('bikes.views.form.help.frame_number') %></div>
-	</div>
-	<div class="field inlined">
-		<%= f.text_field :weight, :placeholder => t('bikes.views.form.weight'), :size => 10 %>
-	</div>
-	
-	<div class="field">
-		<p id="bike_description_not_empty" class="error"><%= t('bikes.views.form.validations.description') %></p>
-		<%= f.text_area :description, :placeholder => t('bikes.views.form.description'), :cols => 64, :rows => 2 %>
+	<label class="control-label"><%= t('bikes.views.form.description') %></label>
+	<div class="controls">
+		<%= f.text_area :description, :placeholder => t('bikes.views.form.placeholders.description'), :rows => 2, :class => "span7" %>
 		<div id="bike_description_count" class="field-counter"></div>
 	</div>
-	
-	
-	<p id="bike_kind_not_empty" class="error"><%= t('bikes.views.form.validations.kind') %></p>
-	<p id="bike_bike_brand_id_not_empty" class="error"><%= t('bikes.views.form.validations.bike_brand') %></p>
-	<div class="with-label">
-		<%= f.label :kind, t('bikes.views.form.kind') %>
+</div>
+
+<div class="control-group">
+	<p id="bike_weight_regexp" class="alert alert-error error"><%= t('bikes.views.form.validations.weight') %></p>
+	<label class="control-label"><%= t('bikes.views.form.weight') %></label>
+	<div class="controls">
+		<%= f.text_field :weight, :placeholder => t('bikes.views.form.placeholders.weight'), :class => "span5" %>
+	</div>
+</div>
+
+<div class="control-group">
+	<label class="control-label"><%= t('bikes.views.form.frame_number') %></label>
+	<div class="controls">
+		<%= f.text_field :frame_number, :placeholder => t('bikes.views.form.placeholders.frame_number'), :class => "span7" %>
+		<span class="label label-important">Importante</span>
+	</div>
+</div>
+
+
+<div class="control-group">
+	<p id="bike_kind_not_empty" class="alert alert-error error"><%= t('bikes.views.form.validations.kind') %></p>
+	<label class="control-label"><%= f.label :kind, t('bikes.views.form.kind') %></label>
+	<div class="controls">
 		<%= f.select :kind, options_for_select(Bike.humanized_categories_for(:types).invert.sort, @bike.kind), :include_blank => true %>
 	</div>
-	<div class="with-label">
-		<%= f.label :bike_brand, t('bikes.views.form.brand') %>
+</div>
+
+<div class="control-group">
+	<p id="bike_bike_brand_id_not_empty" class="alert alert-error error"><%= t('bikes.views.form.validations.bike_brand') %></p>
+	<label class="control-label"><%= f.label :bike_brand, t('bikes.views.form.brand') %></label>
+	<div class="controls">
 		<%= f.select :bike_brand_id, options_from_collection_for_select(BikeBrand.ordered, :id, :name, @bike.bike_brand_id), :include_blank => true %>
 	</div>
 </div>
