--- a/app/views/bikes/index.html.erb
+++ b/app/views/bikes/index.html.erb
@@ -1,34 +1,35 @@
 <div class="container-fluid">
 	<div class="row-fluid top-spaced">
-		<div class="span1"></div>
-		<div class="span10">
-			<div class="pull-right span5">
-				<div class="btn-group">
-	    		<button class="btn">Populares</button>
-	    		<button class="btn">Extraviadas</button>
-	    		<button class="btn">En venta</button>
-					<button class="btn">En renta</button>
-	    	</div>
-				<a href="<%= new_bike_path %>" class="btn btn-inverse pull-right" type="button"><i class="icon-plus icon-white"></i> Registrar mi bici</a>
-				
+		<div class="span12">
+			<div class="span7">
+				<ul class="nav nav-pills pull-right">
+		    	<li><%= link_to 'Lo + popular', '#' %></li>
+					<li><%= link_to 'Bicis robadas', '#' %></li>
+					<li><%= link_to 'En venta', '#' %></li>
+					<li><%= link_to 'En renta', '#' %></li>
+					<li><%= link_to 'Retos', '#' %></li>
+		    </ul>
+			</div>
+			<div class="span5">
+				<form class="form-search">
+		    	<input type="text" class="input-large search-query">
+		    	<button type="submit" class="btn">Buscar</button>
+		    </form>
 			</div>
 		</div>
-		<div class="span1"></div>
 	</div>
 	<div class="row-fluid top-spaced">
-		<div class="span1"></div>
-		<div class="span10 masonry">
+		<div class="span12 masonry">
 			<% if @bikes.empty? %>
-
-				<h1 class="empty"><%= t('bikes.views.index.empty.message') %></h1>
-				<p class="empty"><%= link_to t('bikes.views.index.empty.invite'), new_bike_path %></p>
-
+				<div class="top-spaced">
+					<h3 class="empty centered-text"><%= t('bikes.views.index.empty.message') %></h3>
+					<p class="centered-text"><%= link_to t('bikes.views.index.empty.invite'), new_bike_path %></p>
+				</div>
 			<% else %>
 				<% @bikes.each do |bike| %>
 					<%= render bike %>
 				<% end %>
 			<% end %>
 		</div>
-		<div class="span1"></div>
 	</div>
 </div>
