--- a/app/views/bikes/new.html.erb
+++ b/app/views/bikes/new.html.erb
@@ -1,10 +1,27 @@
-<div class="mid-sheet">
-	<div class="styled-form shadow-light">
-		<%= link_to t('actions.back_arrow').html_safe, bikes_path, :class => 'back' %>
-		<h1><%= t('bikes.views.new.title') %></h1>
-		<%= form_for @bike, :html => { :class => 'bike-upload'} do |f| %>
-			<%= render :partial => 'form', :locals => {:f => f} %>
-			<%= f.submit t('bikes.actions.save'), :id => 'submit-with-photo' %>
-		<% end %>
+<div class="span3"></div>
+<div class="span6">
+	<div class="row-fluid">
+		<div class="span12">
+			<ul class="nav nav-pills pull-left">
+				<li class="active"><%= link_to t('actions.back_arrow').html_safe, bikes_path %></li>
+	    </ul>
+			<h3 class="pull-right"><%= t('bikes.views.new.title') %></h3>
+		</div>
 	</div>
+
+	<%= form_for @bike, :html => {:class => 'bike-upload'} do |f| %>
+		<div class="well">
+			<div class="form-horizontal">
+				<%= render :partial => 'form', :locals => {:f => f} %>
+			</div>
+		</div>
+	
+		<div class="row-fluid">
+			<div class="centered-text span12">
+				<%= f.submit t('bikes.actions.save'), :class => 'btn btn-large btn-success' %>
+			</div>
+		</div>
+	<% end %>
 </div>
+<div class="span3"></div>
+
