--- a/app/views/bikes/show.html.erb
+++ b/app/views/bikes/show.html.erb
@@ -3,7 +3,7 @@
 		<div class="bike-details shadow-light centered">
 			<div class="row-fluid">
 				<div class="pull-right">
-					<h1 class="inlined"><%= @bike.name %></h1>
+					<h3><%= @bike.name %></h3>
 				</div>
 				<div class="pull-left">
 					<ul class="nav nav-pills">
