--- a/app/views/layouts/extended.html.erb
+++ b/app/views/layouts/extended.html.erb
@@ -5,9 +5,8 @@
 	
 	<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
 
-  <%= stylesheet_link_tag    "maps" %>
-  <%= javascript_include_tag "maps" %>
-	<%= yield :javascripts %>
+  <%= stylesheet_link_tag  "maps", "bikes" %>
+  <%= javascript_include_tag controller.controller_name %>
   <%= csrf_meta_tags %>
 </head>
 
