--- a/app/views/layouts/shared/_navbar.html.erb
+++ b/app/views/layouts/shared/_navbar.html.erb
@@ -10,9 +10,8 @@
       <div class="container-fluid nav-collapse pull-right span7">
         <ul class="nav">
 					<li class="<%= is_section_active?('trips') %>"><%= link_to 'Tu ciudad en bici', trips_path  %></li>
-					<li class="<%= is_section_active?('maps') %>"><%= link_to 'Mapa de todos', maps_path %></li>
-					<li><%= link_to 'Mercado', maps_path %></li>
-					<li class="<%= 'active' if controller.controller_name.eql?('bikes') %>"><%= link_to 'Pasarela de bicis', bikes_path %></li>
+					<li class="<%= is_section_active?('maps') %>"><%= link_to 'Mapa', maps_path %></li>
+					<li class="<%= 'active' if controller.controller_name.eql?('bikes') %>"><%= link_to 'Bicis y Retos', bikes_path %></li>
 				</ul>
 				
 				<% if user_signed_in? %>
