--- a/app/views/maps/layers/incidents/_full_form.html.erb
+++ b/app/views/maps/layers/incidents/_full_form.html.erb
@@ -1,12 +1,12 @@
-<div class="altering-view">
+
+<div class="span2"></div>
+<div class="altering-view span8">
 	<div class="row-fluid">
-		<div class="span2">
-			<ul class="nav nav-pills">
-				<li class="active"><%= link_to t('actions.back_arrow').html_safe, maps_layers_incidents_path %></li>
-	    </ul>
-		</div>
-		<div class="span6 pull-right">
-			<h3 class="pull-right"><%= t("incidents.views.#{mode}.title") %></h3>
+		<ul class="nav nav-pills pull-left">
+			<li class="active"><%= link_to t('actions.back_arrow').html_safe, maps_layers_incidents_path %></li>
+    </ul>
+		<div class="pull-right">
+			<h3><%= t("incidents.views.#{mode}.title") %></h3>
 		</div>
 	</div>
 	<div class="row-fluid instruction">
@@ -58,3 +58,4 @@
 		<%= render :partial => 'maps/layers/incidents/form', :locals => {:kind => :breakdown } %>
 	</div>
 </div>
+<div class="span2"></div>
