--- a/app/views/shared/_form_errors.html.erb
+++ b/app/views/shared/_form_errors.html.erb
@@ -1,16 +1,25 @@
 <% if object.errors.any? %>
-  <div id="error_explanation" class="rounded-5">
-    <h2><%= message %></h2>
-
-    <ul>
-    <% object.errors.each do |msg| %>
-			<% if msg == :base %>
+  <div id="error_explanation" class="row-fluid">
+		<div class="span1"></div>
+		<div class="span10 alert alert-error">
+			<p class="centered-text"><b><%= message %></b></p>
+			<ul>
+	    <% object.errors.each do |msg| %>
+				<% if msg == :base %>
 					<% object.errors[:base].each do |error| %>
 						<li><%= error %></li>
 					<% end %>
-			<% end %>
-      
-    <% end %>
-    </ul>
+				<% else %>
+					<% object.errors.each do |error| %>
+						<li><i><%= error %></i><%= object.errors[error] %></li>
+					<% end %>
+				<% end %>
+
+	    <% end %>
+	    </ul>
+		</div>
+		<div class="span1"></div>
   </div>
+	<div class="separator"></div>
+	<div class="top-spaced"></div>
 <% end %>
