--- a/app/assets/stylesheets/plain.css.scss
+++ b/app/assets/stylesheets/plain.css.scss
@@ -67,7 +67,7 @@ body, html {
 		display: block;
 		width: 160px;
 		height: 34px;
-		margin-left: -2px;
+		margin-left: -3px !important;
 		margin-top: 15px;
 		opacity: 0.7;
 	}
