--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -1,15 +1,35 @@
-<div class="small-sheet">
-	<div class="styled-form shadow-light">
-		<%= link_to t('actions.back'), new_user_session_path, :class => 'back' %>
-		<h1><%= t("user_accounts.forgot_password") %></h1>
+<div class="row-fluid">
+	<div class="span3"></div>
+	<div class="span6">
+		<div class="top-spaced-70">
+			<ul class="nav nav-pills">
+	    	<li class="active"><%= link_to t('actions.back_arrow').html_safe, new_user_session_path, :class => 'back' %></li>
+	    </ul>
+		</div>
+		<div class="board rounded-5 shadow-light">
+			<div class="form-horizontal">
+				<h2><%= t("user_accounts.forgot_password") %></h2>
+				
+				<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
+				  <%= devise_error_messages_for('password_recovery') %>
 
-		<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
-		  <%= devise_error_messages! %>
-
-		  <%= f.email_field :email, :placeholder => t('activerecord.attributes.user.email') %>
-	
-			<%= f.submit t("user_accounts.passwords.reset_password") %>
-		<% end %>
+					<div class="control-group">
+			    	<div class="controls">
+						  <%= f.email_field :email, :placeholder => t('activerecord.attributes.user.email') %>
+			    	</div>
+					</div>
+					
+					<div class="row-fluid">
+						<div class="span1"></div>
+						<div class="span10">
+							<%= f.submit t("user_accounts.passwords.reset_password"), :class => "btn btn-primary" %>
+						</div>
+						<div class="span1"></div>
+					</div>
+				<% end %>
+				
+			</div>
+		</div>
 	</div>
+	<div class="span3"></div>
 </div>
-
