--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,18 +1,63 @@
-<div class="small-sheet">
-	<div class="styled-form shadow-light">
-		<%= link_to t('actions.back'), new_user_session_path, :class => 'back' %>
-		<h1><%=t 'user_accounts.registrations.new.title' %></h1>
+<div class="row-fluid">
+	<div class="span3"></div>
+	<div class="span6">
+		<div class="top-spaced">
+			<ul class="nav nav-pills">
+	    	<li class="active"><%= link_to t('actions.back_arrow').html_safe, new_user_session_path, :class => 'back' %></li>
+	    </ul>
+		</div>
+		<div class="board rounded-5 shadow-light">
+			<div class="form-horizontal">
+				<h2><%=t "user_accounts.registrations.new.title" %></h2>
 
-		<%= form_for(resource, :as => resource_name, :url => account_create_path) do |f| %>
-		  <%= devise_error_messages! %>
-		
-		  <%= f.text_field :full_name, :placeholder => t('activerecord.attributes.user.full_name') %>
-			<%= f.email_field :email, :placeholder => t('activerecord.attributes.user.email') %>
-		  <%= f.password_field :password, :placeholder => t('activerecord.attributes.user.password') %>
-		  <%= f.password_field :password_confirmation, :placeholder => t('activerecord.attributes.user.password_confirmation') %>
-		  <%= f.text_field :username, :placeholder => t('activerecord.attributes.user.username') %>
-				
-			<%= f.submit t('user_accounts.registrations.new.commit'), :class => "button blue" %>
-		<% end %>
+				<%= form_for(resource, :as => resource_name, :url => account_create_path) do |f| %>
+				  <%= devise_error_messages_for('registration') %>
+					<div class="row-fluid">
+					<div class="span5">
+						<div class="control-group">
+				    	<div class="controls">
+							  <%= f.text_field :full_name, :placeholder => t('activerecord.attributes.user.full_name') %>
+				    	</div>
+						</div>
+						
+						<div class="control-group">
+				    	<div class="controls">
+								<%= f.email_field :email, :placeholder => t('activerecord.attributes.user.email') %>
+				    	</div>
+						</div>
+
+						<div class="control-group">
+				    	<div class="controls">
+							  <%= f.text_field :username, :placeholder => t('activerecord.attributes.user.username') %>
+				    	</div>
+						</div>
+					</div>
+					
+					
+					<div class="span7">
+						<div class="control-group">
+				    	<div class="controls">
+							  <%= f.password_field :password, :placeholder => t('activerecord.attributes.user.password') %>
+				    	</div>
+						</div>
+						
+						<div class="control-group">
+				    	<div class="controls">
+							  <%= f.password_field :password_confirmation, :placeholder => t('activerecord.attributes.user.password_confirmation') %>
+				    	</div>
+						</div>
+					</div>
+					</div>
+					<div class="row-fluid">
+						<div class="span1"></div>
+						<div class="span10">
+							<%= f.submit t('user_accounts.registrations.new.commit'), :class => "btn btn-primary pull-right" %>
+						</div>
+						<div class="span1"></div>
+					</div>
+				<% end %>
+			</div>
+		</div>
 	</div>
+	<div class="span3"></div>
 </div>
