Standardized visible divs rounded corners on UI, fixed modals for bike statuses management

--- a/app/assets/stylesheets/shared/main.css.scss
+++ b/app/assets/stylesheets/shared/main.css.scss
@@ -429,3 +429,14 @@ p.empty {
 		}
 	}
 }
+
+
+// Ordered styles
+
+.board {
+	margin-top: 50px;
+	background-color: #FFF;
+	padding-top: 20px;
+	border: 0.2px solid #8EC4FF;	
+}
+
