--- a/app/views/bike_statuses/_box_status.html.erb
+++ b/app/views/bike_statuses/_box_status.html.erb
@@ -1,7 +1,7 @@
 <div id="<%= status %>-box" class="item rounded-5 <%= "on" if bike_status.is_available? %>">
 	<span class="label label-info"><%= Bike.humanized_category_for(:statuses, status) %></span>
 	<% if current_user_owns_bike?(bike) %>
-		<%= link_to '', 'javascript:void(0);', :class => "reveals-#{status} edit-glyph" %>
+		<%= link_to '', 'javascript:void(0);', :class => "reveals-#{status} icon-edit edit-icon" %>
 	<% end %>
 	
 	<div class="content">
