--- a/app/views/bikes/_bike.html.erb
+++ b/app/views/bikes/_bike.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= bike.id %>" class="bike shadow-light">
+<div id="<%= bike.id %>" class="bike board rounded-5 shadow-light">
 	<h3><%= link_to bike.name, bike_path(bike) %></h3>
 	<p class="brand"><%= bike.brand %></p>
 	<div class="owner">
