--- a/app/assets/stylesheets/bikes.css.scss
+++ b/app/assets/stylesheets/bikes.css.scss
@@ -15,305 +15,6 @@ body {
 	margin: 0 auto !important;
 }
 
-.bike {
-	h3 {
-		font-size: 20px;
-		a{
-			text-decoration: none;
-		}
-	}
-	
-	h3:hover {
-		a {
-			color: #FF5F00;
-		}
-	}
-}
-
-.bike {
-	padding: 14px;
-	border: 1px solid #E3E3E3;
-	background-color: #F4F4F4;
-  width: 250px;
-  margin: 27px;
-  float: left;
-	border: 1px solid #BABABA;
-	font-size: 12px;
-	
-	.brand {
-		padding: 0px;
-		margin-top: 0px;
-		
-		text-transform: uppercase;
-		font-size: 11px;
-		color: #404040;
-	}
-	
-	ul.social-status {
-		margin: 0px;
-		
-		li { 
-			margin: 0px 5px 0px 0px !important;
-			text-transform: uppercase;
-			font-size: 10px;
-			padding: 0px !important;
-			
-			a {
-				font-weight: 500 !important;
-			}
-		}
-	}
-	
-	.status {
-		height: 20px;	
-		p {
-			a:hover {
-				text-decoration: underline;
-			}
-			a {
-				color: black;
-			}
-			
-			padding-top: 10px !important;
-			font-size: 12px;
-			display: inline-block;
-			margin: 0px;
-
-			.count {
-				padding: 2px;
-				font-weight: bold;
-			}
-		}
-	}
-	
-	.owner {
-		margin-top: -5px;
-		padding-bottom: 5px;
-		text-align: right;
-		font-size: 11px;
-	}
-}
-
-.bike-details, .bike-statuses, .bike-comments, .bike-description, .bike-photos {
-	
-	h3{
-		color: #FF5F00;
-		font-size: 35px;
-	}
-	
-	.edit:hover {
-		background-color: #40A23E;
-		
-		a {
-			text-decoration: none !important;
-		}
-	}
-	
-	.edit {
-		margin: 0px;
-		font-size: 11px;
-		font-style: normal; 
-		background-color: #80B677;
-		display: inline-block;
-		padding: 2px 5px;
-		vertical-align: 5px;
-		
-		a {
-			font-weight: bold;
-			color: white !important;
-		}
-	}
-}
-
-.bike-details, .bike-statuses, .bike-comments, .bike-description {
-	width: 680px;
-	padding: 20px;
-	padding-bottom: 10px;
-	background-color: white;
-}
-
-.bike-description {
-	background-color: #1A1A1A;
-	padding-bottom: 20px;
-	color: white;
-	font-size: 13px;
-	
-	.main {
-		text-align: center;
-		display: inline-block;
-		width: 100%;
-	}
-	
-	.status {
-		width: auto;
-		font-size: 14px;
-		background-color: #131313;
-		padding: 5px 15px 5px 10px;
-		display: inline-block;
-		
-		p {
-			padding: 0px;
-			margin: 0px;
-		}
-		
-		p.likes {
-			color: #FFA6A3;
-			.count {
-				padding-right: 5px;
-			}
-		}
-		
-		.heart {
-			margin-right: 10px;
-		}
-		
-		* {
-			display: inline-block !important;
-		}
-	}
-}
-
-.bike-comments {
-	background-color: #E7E7E7;
-	margin-bottom: 50px;
-	h2 {
-		text-align: center;
-	}
-	
-	.actions {
-		margin: -15px 80px 0 0;		
-	}
-	
-	#comments-listing {
-		margin-top: 50px;
-		.comment {
-			font-size: 14px;
-			width: 620px;
-			padding: 10px 20px;
-			border-bottom: 1px solid #CFCFCF;
-			
-			.user {
-				font-style: italic;
-				color: #327E29;
-			}
-			
-			.datetime {
-				font-size: 12px;
-			}
-			
-			.delete:hover {
-				text-decoration: underline;
-			}
-			
-			.delete {
-				font-weight: bold;
-				color: black;
-				font-size: 13px;
-			}
-		}
-	}
-}
-
-.photo img {
-	border: 1px solid #8C8C8C;
-}
-
-.bike-photos {
-	width: 720px;
-	height: 370px;
-	background-color: #5D5D5D;
-	
-	.info {
-		display: none;
-		position: relative;
-		margin-top: -200px;
-		margin-left: 160px;
-		width: 400px;
-		text-align: center;
-		background-color: rgba(255,255,255, 0.7);
-		color: #3E3E3E;
-		font-size: 13px;
-		border: 1px solid white;
-		text-align: center;
-		
-		p {
-			padding: 5px 0px 5px 0px;
-			margin: 0px 10px 0px 10px;
-			display: inline-block;
-			a {
-				margin-left: 14px;
-			}
-		}
-		
-		.brand {
-			text-transform: uppercase;
-		}
-		
-		a {
-			margin-left: 10px;
-			color: #4A8237;
-		}
-	}
-}
-
-.bike-details {
-	padding-top: 10px;
-	
-	a:hover {
-		text-decoration: underline !important;
-	}
-	
-	a.back {
-		text-align: left;
-	}
-	
-	.owner {
-		text-align: right;
-	}
-}
-
-.bike-statuses {
-	
-	.item {
-		padding: 10px;
-		font-size: 11px;
-		display: inline-block;
-		margin-right: 5px;
-		
-		.content {
-			margin-top: 10px;
-		}
-		
-		.concept {
-			background-color: #A9A9A9;
-			color: white;
-			padding: 5px 8px;
-			margin-right: 0px;
-			margin-left: 0px;
-		}
-		
-	}
-	
-	.statuses {
-		text-align: center;
-		margin-bottom: 13px;
-		
-		.on {
-			border: 2px solid #5BA347 !important;
-			
-			.concept {
-				background-color: #5BA347;
-			}
-		}
-		
-		.item {
-			border: 2px solid #DDDDDD;
-			text-align: center;
-		}
-		
-	}
-}
-
 .status {
 	div { display: inline-block }
 	p {
@@ -355,4 +56,298 @@ body {
 	font-style: italic;
 	font-size: 14px;
 	color: #858585;
+}
+
+// Styles for index view
+
+.index {
+
+	.bike:hover {
+		border: 0.2px solid #8EC4FF;
+		
+		h3 {
+			a {
+				color: #FF5F00;
+			}
+		}
+	}
+
+	.bike {
+		padding: 14px;
+		background-color: #F4F4F4;
+		border: 1px solid white;
+	  width: 250px;
+	  margin: 27px;
+	  float: left;
+		font-size: 12px;
+
+		h3 {
+			font-size: 20px;
+			a{
+				text-decoration: none;
+			}
+		}
+		
+		.brand {
+			padding: 0px;
+			margin-top: 0px;
+
+			text-transform: uppercase;
+			font-size: 11px;
+			color: #404040;
+		}
+
+		ul.social-status {
+			margin: 0px;
+
+			li { 
+				margin: 0px 5px 0px 0px !important;
+				text-transform: uppercase;
+				font-size: 10px;
+				padding: 0px !important;
+
+				a {
+					font-weight: 500 !important;
+				}
+			}
+		}
+
+		.status {
+			height: 20px;	
+			p {
+				a:hover {
+					text-decoration: underline;
+				}
+				a {
+					color: black;
+				}
+
+				padding-top: 10px !important;
+				font-size: 12px;
+				display: inline-block;
+				margin: 0px;
+
+				.count {
+					padding: 2px;
+					font-weight: bold;
+				}
+			}
+		}
+
+		.owner {
+			margin-top: -5px;
+			padding-bottom: 5px;
+			text-align: right;
+			font-size: 11px;
+		}
+	}
+}
+
+// Styles for show view
+
+.show {
+	
+	.bike {
+		width: 720px;
+		margin-bottom: 50px;
+		
+		h3 {
+			color: #FF6200;
+		}
+		
+		.photo img {
+			border: 1px solid #8C8C8C;
+		}
+		
+		.details, .statuses, .comments, .description {
+			padding: 20px;
+			padding-bottom: 10px;
+			background-color: white;
+		}
+
+		.description {
+			background-color: #1A1A1A;
+			padding-bottom: 20px;
+			color: white;
+			font-size: 13px;
+
+			.main {
+				text-align: center;
+				display: inline-block;
+				width: 100%;
+			}
+
+			.status {
+				width: auto;
+				font-size: 14px;
+				background-color: #131313;
+				padding: 5px 15px 5px 10px;
+				display: inline-block;
+
+				p {
+					padding: 0px;
+					margin: 0px;
+				}
+
+				p.likes {
+					color: #FFA6A3;
+					.count {
+						padding-right: 5px;
+					}
+				}
+				
+				.heart {
+					margin-right: 10px;
+				}
+
+				* {
+					display: inline-block !important;
+				}
+			}
+		}
+
+		.comments {
+			background-color: #E5EBFF;
+			h2 {
+				text-align: center;
+			}
+
+			.actions {
+				margin: -15px 80px 0 0;		
+			}
+
+			.list {
+				margin-top: 10px;
+				.comment {
+					font-size: 14px;
+					width: 620px;
+					padding: 10px 20px;
+					background-color: #E1E1E1;
+
+					.user {
+						font-style: italic;
+						color: #327E29;
+					}
+
+					.datetime {
+						font-size: 12px;
+					}
+
+					.delete:hover {
+						text-decoration: underline;
+					}
+
+					.delete {
+						font-weight: bold;
+						color: black;
+						font-size: 13px;
+					}
+				}
+			}
+		}
+
+		.details {
+			padding-top: 10px;
+
+			a:hover {
+				text-decoration: underline !important;
+			}
+
+			a.back {
+				text-align: left;
+			}
+
+			.owner {
+				text-align: right;
+			}
+		}
+
+		.statuses {
+			text-align: center;
+			
+			.edit-icon {
+				font-size: 20px;
+				margin-left: 10px;
+				vertical-align: bottom;
+				text-decoration: none;
+			}
+			
+			.item {
+				padding: 10px;
+				font-size: 11px;
+				display: inline-block;
+				margin-right: 5px;
+				border: 2px solid #DDDDDD;
+
+				.content {
+					margin-top: 10px;
+				}
+
+				.concept {
+					background-color: #A9A9A9;
+					color: white;
+					padding: 5px 8px;
+					margin-right: 0px;
+					margin-left: 0px;
+				}
+
+			}
+			
+			.on {
+				border: 2px solid #FF5200 !important;
+
+				.concept {
+					background-color: #5BA347;
+				}
+			}
+		}
+		
+		.modal {
+			.controls {
+				margin-left: 0px;
+			}
+		}
+		
+		
+		.photos {
+			width: 100%;
+			height: 370px;
+			background-color: #5D5D5D;
+
+			.info {
+				display: none;
+				position: relative;
+				margin-top: -200px;
+				margin-left: 160px;
+				width: 400px;
+				text-align: center;
+				background-color: rgba(255,255,255, 0.7);
+				color: #3E3E3E;
+				font-size: 13px;
+				border: 1px solid white;
+				text-align: center;
+
+				p {
+					padding: 5px 0px 5px 0px;
+					margin: 0px 10px 0px 10px;
+					display: inline-block;
+					a {
+						margin-left: 14px;
+					}
+				}
+
+				.brand {
+					text-transform: uppercase;
+				}
+
+				a {
+					margin-left: 10px;
+					color: #4A8237;
+				}
+			}
+		}
+
+		
+	}
+	
 }
