--- a/app/assets/stylesheets/trips.css.scss
+++ b/app/assets/stylesheets/trips.css.scss
@@ -11,13 +11,16 @@
 }
 
 .rides {
+	
 	.box:hover {
-		.core {
-			border: 1px solid #0049DB !important;
-			-moz-box-shadow: 0 0 8px #0049DB;
-			-webkit-box-shadow: 0 0 8px #0049DB;
-			box-shadow: 0 0 8px #0049DB;
+		.stats {
+			background-color: #E8E8F7;
 		}
+		
+		border: 1px solid #0049DB !important;
+		-moz-box-shadow: 0 0 8px #0049DB;
+		-webkit-box-shadow: 0 0 8px #0049DB;
+		box-shadow: 0 0 8px #0049DB;
 	}
 	
 	.core {
@@ -50,12 +53,10 @@
 
 .trips {
 	.box:hover {
-		.core {
-			border: 1px solid #FF6C01 !important;
-			-moz-box-shadow: 0 0 8px #FF6C01;
-			-webkit-box-shadow: 0 0 8px #FF6C01;
-			box-shadow: 0 0 8px #FF6C01;
-		}
+		border: 1px solid #FF6C01 !important;
+		-moz-box-shadow: 0 0 8px #FF6C01;
+		-webkit-box-shadow: 0 0 8px #FF6C01;
+		box-shadow: 0 0 8px #FF6C01;
 	}
 	
 	.core {
@@ -83,7 +84,6 @@
 		.core {
 			width: 300px !important;
 			height: 200px !important;
-			border: 1px solid #B9B9B9;
 			padding: 3px;
 			
 			img {
@@ -96,7 +96,6 @@
 		.stats {
 			margin-top: 4px;
 			width: 99%;
-			border: 1px solid #D2D2D2;
 			
 			a {
 				display: inline-block;
@@ -133,14 +132,10 @@
 		}
 		
 		.box {
+			border: 1px solid #B9B9B9;
 			margin: 18px;
 			display: inline-block;
-		}
-		
-		.box:hover {			
-			.stats {
-				background-color: #ECF2F7;
-			}
+			padding-bottom: 5px;
 		}
 
 	}
