--- a/app/views/bike_statuses/_rent_form.html.erb
+++ b/app/views/bike_statuses/_rent_form.html.erb
@@ -1,14 +1,16 @@
-<div class="styled-form">
-	
-	<%= f.select :availability, boolean_options_for_select(status.availability), {}, :class => 'bike_statuses_availability' %>
-	
-	<%= f.hidden_field :concept, :value => Bike.category_for(:statuses, :rent) %>
-	
-	<div class="dependent-fields <%= "hidden" unless status.availability %>">
-		<h3><%= t('bike_statuses.views.form.rent_disclaimer') %></h3>
-		<%= currency_field_for(f, :hour_cost, status.hour_cost, t('bike_statuses.views.form.hour_cost')) %>
-		<%= currency_field_for(f, :day_cost, status.day_cost, t('bike_statuses.views.form.day_cost')) %>
-		<%= currency_field_for(f, :month_cost, status.month_cost, t('bike_statuses.views.form.month_cost')) %>
+<div class="control-group trigger-parent">
+	<%= f.label :availability, t("bike_statuses.views.modal.#{status_category}.title"), :class => 'control-label' %>
+	<div class="controls">
+		<%= f.select :availability, boolean_options_for_select(status.availability), {}, :class => 'bike_statuses_availability' %>
 	</div>
-	<%= f.submit t('actions.save') %>
 </div>
+
+<%= f.hidden_field :concept, :value => Bike.category_for(:statuses, :rent) %>
+
+<div class="dependent-fields <%= "hidden" unless status.availability %>">
+	<p><%= t('bike_statuses.views.form.rent_disclaimer') %></p>
+	<%= currency_field_for(f, :hour_cost, status.hour_cost, t('bike_statuses.views.form.hour_cost')) %>
+	<%= currency_field_for(f, :day_cost, status.day_cost, t('bike_statuses.views.form.day_cost')) %>
+	<%= currency_field_for(f, :month_cost, status.month_cost, t('bike_statuses.views.form.month_cost')) %>
+</div>
+<%= f.submit t('actions.save'), :class => 'btn btn-primary' %>
