--- a/app/views/bike_statuses/_share_form.html.erb
+++ b/app/views/bike_statuses/_share_form.html.erb
@@ -1,9 +1,15 @@
-<div class="styled-form">	
+<div class="control-group trigger-parent">
+	<%= f.label :availability, t("bike_statuses.views.modal.#{status_category}.title"), :class => 'control-label' %>
+	<div class="controls">
 		<%= f.select :availability, boolean_options_for_select(status.availability), {}, :class => 'bike_statuses_availability' %>
-		<%= f.hidden_field :concept, :value => Bike.category_for(:statuses, :share) %>
-		<div class="dependent-fields <%= "hidden" unless status.availability %>">
-			<%= f.check_box :only_friends, :class => 'inlined' %>
-			<%= f.label :only_friends, t('bike_statuses.views.form.share.only_friends'), :class => 'postfix postfix-min' %>
-		</div>
-	<%= f.submit t('actions.save') %>
+	</div>
 </div>
+
+<%= f.hidden_field :concept, :value => Bike.category_for(:statuses, :share) %>
+<div class="dependent-fields control-group <%= "hidden" unless status.availability %>">
+	<%= f.label :only_friends, t('bike_statuses.views.form.share.only_friends'), :class => 'control-label' %>
+	<div class="controls">
+		<%= f.check_box :only_friends, :class => 'inlined' %>
+	</div>
+</div>
+<%= f.submit t('actions.save'), :class => 'btn btn-primary' %>
