--- a/app/views/comments/_new.html.erb
+++ b/app/views/comments/_new.html.erb
@@ -1,28 +1,26 @@
-<div class="row-fluid top-spaced">
-	<div class="span2"></div>
-	<div class="span8">
+<div class="row-fluid">
+	<div class="span1"></div>
+	<div class="span10">
 		<%= form_for Comment.new, :remote => true, :class => "form-horizontal" do |f| %>
+			<div class="row-fluid">
 			<div class="control-group">
 				<div class="controls">
 					<%= f.text_area :comment, :rows => 5, :class => "span12" %>
+					<div id="comment_comment_count" class="field-counter pull-left"></div>
 				</div>
 				<%= f.hidden_field :commentable_id, :value => commentable.id %>
 				<%= f.hidden_field :commentable_type, :value => commentable.class.to_s %>
 			</div>
-			<div class="control-group">
-				<div class="span12">
-					<div id="comment_comment_count" class="field-counter pull-left"></div>
-				</div>
 			</div>
-			<div class="control-group">
-				<div class="span12">
+			<div class="row-fluid top-spaced">
+				<div class="span6"><%= link_to t('comments.actions.cancel'), 'javascript:void(0);' %></div>
+				<div class="span6">
 					<div class="pull-right">
-						<%= link_to t('comments.actions.cancel'), 'javascript:void(0);' %>
 						<%= f.submit t('comments.actions.comment'), :class => 'btn btn-success' %>
 					</div>
 				</div>
 			</div>
 		<% end %>
 	</div>
-	<div class="span2"></div>
+	<div class="span1"></div>
 </div>
