--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -21,7 +21,7 @@
 
 <div class="row-fluid trips centered-text">
 	<div class="content span12">
-		<div class="box">
+		<div class="box rounded-5">
 			<div class="core">
 				<%= image_tag('/assets/trips/zocalo_front.jpg') %>
 				<div class="details">
@@ -37,7 +37,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="box">
+		<div class="box rounded-5">
 			<div class="core">
 				<%= image_tag('/assets/trips/tacubaya_front.jpg') %>
 				<div class="details">
@@ -53,7 +53,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="box">
+		<div class="box rounded-5">
 			<div class="core">
 				<%= image_tag('/assets/trips/condesa_front.jpg') %>
 				<div class="details">
@@ -69,7 +69,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="box">
+		<div class="box rounded-5">
 			<div class="core">
 				<%= image_tag('/assets/trips/paseos_front.jpg') %>
 				<div class="details">
@@ -85,7 +85,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="box">
+		<div class="box rounded-5">
 			<div class="core">
 				<%= image_tag('/assets/trips/downtown_front.jpg') %>
 				<div class="details">
@@ -101,7 +101,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="box">
+		<div class="box rounded-5">
 			<div class="core">
 				<%= image_tag('/assets/trips/coyoacan_front.jpg') %>
 				<div class="details">
@@ -134,7 +134,7 @@
 </div>
 <div class="row-fluid rides centered-text">
 	<div class="content centered span12">
-		<div class="box">
+		<div class="box rounded-5">
 			<div class="core">
 				<%= image_tag('/assets/trips/cicloton_front.jpg') %>
 				<div class="details">
@@ -152,7 +152,7 @@
 			</div>
 		</div>
 		
-		<div class="box">
+		<div class="box rounded-5">
 			<div class="core">
 				<%= image_tag('/assets/trips/dinamos_front.jpg') %>
 				<div class="details">
@@ -170,7 +170,7 @@
 			</div>
 		</div>
 		
-		<div class="box">
+		<div class="box rounded-5">
 			<div class="core">
 				<%= image_tag('/assets/trips/divisiondelsur_front.jpg') %>
 				<div class="details">
