--- a/app/views/maps/layers/incidents/index.html.erb
+++ b/app/views/maps/layers/incidents/index.html.erb
@@ -3,7 +3,7 @@
 		<a class="main-title"><i class="icon icon-chevron-down"></i><i class="icon icon-chevron-up"></i> Incidentes</a>
 		
 		<div class="contents">
-			<ul class="stats">
+			<ul class="stats inlined-list">
 				<li>
 					<%= partial_numbers_for(@incidents_count, :theft) %>
 				</li>
