--- a/app/views/bikes/_form.html.erb
+++ b/app/views/bikes/_form.html.erb
@@ -5,7 +5,7 @@
 	<p id="bike_name_not_empty" class="alert alert-error error"><%= t('bikes.views.form.validations.name') %></p>
 	<label class="control-label"><%= t('bikes.views.form.name') %></label>
 	<div class="controls">
-		<%= f.text_field :name, :placeholder => t('bikes.views.form.placeholders.name'), :class => "span6" %>
+		<%= f.text_field :name, :placeholder => t('bikes.views.form.placeholders.name'), :class => "input-large" %>
 		<div id="bike_name_count" class="field-counter"></div>
 	</div>
 </div>
@@ -15,7 +15,7 @@
 	
 	<label class="control-label"><%= t('bikes.views.form.description') %></label>
 	<div class="controls">
-		<%= f.text_area :description, :placeholder => t('bikes.views.form.placeholders.description'), :rows => 2, :class => "span7" %>
+		<%= f.text_area :description, :placeholder => t('bikes.views.form.placeholders.description'), :rows => 2, :class => "input-large" %>
 		<div id="bike_description_count" class="field-counter"></div>
 	</div>
 </div>
@@ -24,14 +24,14 @@
 	<p id="bike_weight_regexp" class="alert alert-error error"><%= t('bikes.views.form.validations.weight') %></p>
 	<label class="control-label"><%= t('bikes.views.form.weight') %></label>
 	<div class="controls">
-		<%= f.text_field :weight, :placeholder => t('bikes.views.form.placeholders.weight'), :class => "span5" %>
+		<%= f.text_field :weight, :placeholder => t('bikes.views.form.placeholders.weight'), :class => "input-large" %>
 	</div>
 </div>
 
 <div class="control-group">
 	<label class="control-label"><%= t('bikes.views.form.frame_number') %></label>
 	<div class="controls">
-		<%= f.text_field :frame_number, :placeholder => t('bikes.views.form.placeholders.frame_number'), :class => "span7" %>
+		<%= f.text_field :frame_number, :placeholder => t('bikes.views.form.placeholders.frame_number'), :class => "input-large" %>
 		<span class="label label-important">Importante</span>
 	</div>
 </div>
