--- a/app/views/layouts/profiles.html.erb
+++ b/app/views/layouts/profiles.html.erb
@@ -23,15 +23,14 @@
 		<div class="well menu">
 			<ul class="nav nav-list">
 	    	<li class="nav-header">Tú</li>
-	    	<li class="active"><a href="#">Tu actividad</a></li>
+	    	<li class="active"><%= link_to 'Tu actividad', user_profile_path(@user.username) %></li>
 	    	<li><a href="#">Tus bicis</a></li>
 	    	<li><a href="#">Cerca de ti</a></li>
 	    	<li><a href="#">Mensajes</a></li>
 	    	<li><a href="#">Boletín Semanal</a></li>
 	    	<li class="nav-header">Tu Wikicleta</li>
-				<li><%= link_to 'Cuenta', settings_account_path %></li>
+				<li><%= link_to 'Perfil', settings_profile_path %></li>
 				<li><%= link_to 'Acceso', settings_access_path %></li>
-				<li><%= link_to 'Preferencias', settings_profile_path %></li>			
 	    </ul>
 		</div>
 	</div>
