--- a/app/views/settings/_authorization.html.erb
+++ b/app/views/settings/_authorization.html.erb
@@ -1,12 +1,16 @@
-<div class="account">
-	<div class="provider"><%= auth %></div>
-	<div class="status">
-		<% authorization_for_user = @user.authorization_from(auth) %>
-		<% if authorization_for_user %>
-			<%= link_to t('user_accounts.settings.authorizations.umount'), users_auth_path(authorization_for_user), 
-			:method => :delete, :confirm => t('user_accounts.settings.authorizations.messages.confirmation') %>
-		<% else %>
-			<%= link_to t('user_accounts.settings.authorizations.new'), user_omniauth_authorize_path(auth) %>
+<table class="table table-condensed">
+	<thead>
+		<tr>
+			<th>Red Social</th>
+			<th>Status</th>
+		</tr>
+	</thead>
+	<tbody>
+		<% Authorization.supported.each do |auth| %>
+			<tr>
+				<td><%= auth.capitalize %></td>
+				<td><%= @user.authorization_from(auth) ? 'Activo' : link_to(t('user_accounts.settings.authorizations.new'), user_omniauth_authorize_path(auth)) %></td>
+			</tr>
 		<% end %>
-	</div>
-</div>
+	</tbody>
+</table>
