Profile menu options selected depending on route path

--- a/app/views/layouts/profiles.html.erb
+++ b/app/views/layouts/profiles.html.erb
@@ -23,10 +23,10 @@
 		<div class="well menu">
 			<ul class="nav nav-list">
 	    	<li class="nav-header">Tú</li>
-	    	<li class="active">
+	    	<li class="<%= on_path?(user_profile_path(@user.username)) %>">
 					<%= link_to (user_signed_in? ? 'Tu actividad' : 'Actividad reciente'), user_profile_path(@user.username) %>
 				</li>
-	    	<li>
+	    	<li class="<%= on_path?(user_bikes_path(@user.username)) %>">
 					<%= link_to (user_signed_in? ? 'Tus bicis' : 'Bicis'), user_bikes_path(@user.username) %>
 				</li>
 				<% if user_signed_in? %>
@@ -34,8 +34,8 @@
 		    	<li><a href="#">Mensajes</a></li>
 		    	<li><a href="#">Boletín Semanal</a></li>
 	    		<li class="nav-header">Tu Wikicleta</li>
-					<li><%= link_to 'Perfil', settings_profile_path %></li>
-					<li><%= link_to 'Acceso', settings_access_path %></li>
+					<li class="<%= on_path?(settings_profile_path) %>"><%= link_to 'Perfil', settings_profile_path %></li>
+					<li class="<%= on_path?(settings_access_path) %>"><%= link_to 'Acceso', settings_access_path %></li>
 				<% end %>
 	    </ul>
 		</div>
